Fix powerpoint preview collapsing all slides in one

--- a/packages/contentprocessing/assets/css/preview.css
+++ b/packages/contentprocessing/assets/css/preview.css
@@ -265,65 +265,3 @@
 .navigation__slide-hidden {
     opacity:0.5;
 }
-
-.slide {
-    border: 1px solid #000;
-    color: #000;
-    background:#fff;
-    margin-bottom:16px;
-    min-height:400px;
-    position:relative;
-    overflow:hidden;
-    max-width:100%;
-    min-width: 940px;
-}
-
-.slide__info {
-    background:rgba(0,0,0,0.2);
-}
-
-.slide__infoitem {
-    display:inline-block;
-    margin-right:8px;
-}
-
-.shape {
-    border: 0;
-    max-width:100%;
-}
-
-.shape-title, .shape-ctrTitle {
-    font-size: 48px;
-    font-weight:bold;
-    position: relative;
-    z-index: 1;
-}
-
-.shape-subtitle {
-    font-size: 24px;
-}
-
-.slide-title {
-    border-color: green;
-}
-
-.slide-title .shape-title {
-    text-align:center;
-}
-
-.slide__number {
-    position:absolute;
-    bottom:16px;
-    right:16px;
-    z-index:10;
-}
-
-.slide__paragraph {
-    margin:0;
-}
-
-
-.shape-ftr, .shape-dt {
-    position: absolute;
-    bottom: 0;
-}
