--- a/resources/assets/css/components/preview.css
+++ b/resources/assets/css/components/preview.css
@@ -7,11 +7,11 @@
 	}
 	
 	
-	img {
+	/* img {
 		max-width: 100%;
 		display: block;
 		margin: 0 auto;
-	}
+	} */
 	
 	iframe {
 		width: calc(100% + 16px);
